# lexguard

./: .gitignore  README.md  pyproject.toml
data/benchmarks/: retrieval_smoke_test.json
data/raw/: sample_policy.txt  sample_policy_2.txt
notebooks/: 01_parsing.ipynb  02_retrieval_eval.ipynb
src/lexguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lexguard/ingestion/: chunker.py  pdf_loader.py  text_loader.py
src/lexguard/retrieval/: bm25.py  dense.py  hybrid.py
src/lexguard/schemas/: document.py
src/lexguard/utils/: paths.py
